--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Karma Mobile</title>
+    <title>Karma: startup-landing-page-clone</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-
+    <nav class="top-navigation">
+        <div class="content">
+            <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26">
+            <ul class="links">
+                <li>Meet Karma</li>
+                <li>How It works</li>
+                <li>Store</li>
+                <li>Blog</li>
+                <li>Help</li>
+                <li>Log in</li>
+            </ul>
+        </div>
+    </nav>
 </body>
 
 </html>
