--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -15,12 +16,12 @@
         <div class="content">
             <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26">
             <ul class="links">
-                <li>Meet Karma</li>
-                <li>How It works</li>
-                <li>Store</li>
-                <li>Blog</li>
-                <li>Help</li>
-                <li>Log in</li>
+                <li class="active"><a href="#">Meet Karma</a></li>
+                <li><a href="#">How It works</a></li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Help</a></li>
+                <li><a href="#">Log in</a></li>
             </ul>
         </div>
     </nav>
