--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <button class="buttons">Learn More</button>
         </div>
     </section>
+    <section class="cases">
+        <div class="content">
+            <h2>Everyone needs a little Karma.</h2>
+        </div>
+    </section>
 </body>
 
 </html>
