--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
     <section class="cases">
         <div class="content">
             <h2>Everyone needs a little Karma.</h2>
+            <ul class="flexParent">
+                <li class="devices">
+                    <img src="images/icon-devices.svg" width="127" height="127" alt="Internet for all devices image">
+                </li>
+                <li class="devices">
+                    <img src="images/icon-coffee.svg" width="127" height="127" alt="Boost your productivity image">
+                </li>
+                <li class="devices">
+                    <img src="images/icon-refill.svg" width="127" height="127" alt="Pay as You Go image">
+                </li>
+            </ul>
+            <div class="flexParent">
+                <h3 class="devices">Internet for all devices</h3>
+                <h3 class="devices">Boost your productivity</h3>
+                <h3 class="devices">Pay as You Go</h3>
+            </div>
         </div>
     </section>
 </body>
