--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Karma: startup-landing-page-clone</title>
     <link rel="stylesheet" href="css/normalize.css" type="text/css">
+    <!--    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -21,7 +22,7 @@
                 <li><a href="#">Store</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Help</a></li>
-                <li><a href="#">Log in</a></li>
+                <li><a href="#">Login</a></li>
             </ul>
         </div>
     </nav>
@@ -29,7 +30,9 @@
         <div class="content">
             <h1>Introducing Karma</h1>
             <h3>Bring WiFi with you, everywhere you go.</h3>
-            <button class="buttons">Learn More</button>
+            <button class="buttons">
+                <a href="#">Learn More</a>
+            </button>
         </div>
     </section>
     <section class="cases">
@@ -53,6 +56,26 @@
             </div>
         </div>
     </section>
+    <footer class="social">
+        <div class="content">
+            <hr>
+            <h5>Join us on</h5>
+            <ul class="icons">
+                <li class="twitter">
+                    <i class="fa fa-twitter"></i>
+                </li>
+                <li class="facebook">
+                    <i class="fa fa-facebook"></i>
+                </li>
+                <li class="instagram">
+                    <i class="fa fa-instagram"></i>
+                </li>
+            </ul>
+            <span class="copy">
+                &copy; Karma Mobility, Inc.
+            </span>
+        </div>
+    </footer>
 </body>
 
 </html>
