--- a/index.html
+++ b/index.html
@@ -41,19 +41,17 @@
             <ul class="flexParent">
                 <li class="devices">
                     <img src="images/icon-devices.svg" width="127" height="127" alt="Internet for all devices image">
+                    <h3>Internet for all devices</h3>
                 </li>
                 <li class="devices">
                     <img src="images/icon-coffee.svg" width="127" height="127" alt="Boost your productivity image">
+                    <h3>Boost your productivity</h3>
                 </li>
                 <li class="devices">
                     <img src="images/icon-refill.svg" width="127" height="127" alt="Pay as You Go image">
+                    <h3>Pay as You Go</h3>
                 </li>
             </ul>
-            <div class="flexParent">
-                <h3 class="devices">Internet for all devices</h3>
-                <h3 class="devices">Boost your productivity</h3>
-                <h3 class="devices">Pay as You Go</h3>
-            </div>
         </div>
     </section>
     <footer class="social">
