--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <nav class="top-navigation">
         <div class="content">
-            <img class="logo content" src="images/karma-logo.svg" alt="Logo Image" width="26">
+            <img class="logo" src="images/karma-logo.svg" alt="Logo Image" width="26">
             <ul class="links">
                 <li class="active"><a href="#">Meet Karma</a></li>
                 <li><a href="#">How It works</a></li>
